Fixed issue with contrast.

--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -21,8 +21,8 @@ $font-size-h6:  20px !default;
 $spacing-unit:     40px !default;
 
 $text-color:       #fefefe !default;
-$brand-color:      #2a7ae2 !default;
-$visited-color:    #977ac8 !default;
+$brand-color:      #7fb2ff !default;
+$visited-color:    #bc94ff !default;
 
 $background-color: #1e1e1e !default;
 $code-background-color: #181818 !default;
